[package]
name = "nessus-parser"
version = "0.1.0"
edition = "2021"
description = "Program to parse `.nessus` info"
authors = ["Adrian J. Delgado <nessus-parser@adrianjdelgado.com>"]
publish = false
rust-version = "1.67"

[profile.release]
strip = true # Automatically strip symbols from the binary.

[dependencies]
clap = { version = "4.2.2", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
] }
color-eyre = "0.6.2"
hard-xml = "1.21.0"
macaddr = "1.0.1"
ordered-float = "3.6.0"
rayon = "1.7.0"
tabled = { version = "0.11.1", default-features = false, features = ["std"] }
terminal_size = "0.2.6"
